--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Roll Call</string>
+    <string name="app_name">點名系統</string>
+    <string name="teacher_button">教師</string>
+    <string name="student_button">學生</string>
+    <string name="manage_course">課程管理</string>
 </resources>
